--- a/Window1.xaml
+++ b/Window1.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Kursova_GAME"
         mc:Ignorable="d"
-        Title="Window1" Height="508.456" Width="361.416" ResizeMode="NoResize">
+        Title="Складність" Height="508.456" Width="361.416" ResizeMode="NoResize">
     <Grid>
         <Grid.Background>
             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
