--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,9 +6,6 @@
         xmlns:local="clr-namespace:Kursova_GAME"
         mc:Ignorable="d"
         Title="Нурікабе" Height="508.456" Width="475.332" WindowStartupLocation="CenterScreen" Loaded="Window_Loaded" Focusable="False" Background="White" ResizeMode="CanMinimize" Closing="Window_Closing">
-    <Window.Resources>
-
-    </Window.Resources>
     <Grid x:Name="Grid1" Margin="0,0,0,-1">
         <Grid.Background>
             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -44,7 +41,7 @@
                 <ImageBrush ImageSource="Шестерня2.png" Stretch="Uniform"/>
             </Button.Background>
         </Button>
-        <Ellipse Grid.Column="3" HorizontalAlignment="Left" Height="43" Margin="250,0,0,0" Stroke="Black" VerticalAlignment="Top" Width="43" Grid.ColumnSpan="2">
+        <Ellipse Grid.Column="3" HorizontalAlignment="Left" Height="43" Margin="250,0,0,0" VerticalAlignment="Top" Width="43" Grid.ColumnSpan="2">
             <Ellipse.Fill>
                 <ImageBrush ImageSource="moon.com.png" Stretch="Uniform"/>
             </Ellipse.Fill>
