--- a/Settings.xaml
+++ b/Settings.xaml
@@ -5,8 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Kursova_GAME"
         mc:Ignorable="d"
-        Title="Налаштування" Height="508.456" Width="361.416">
-    <Grid>
+        Title="Налаштування" Height="508.456" Width="361.416" ResizeMode="NoResize">
+    <Grid x:Name="TopGrid">
         <Grid.Background>
             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                 <GradientStop Color="Black" Offset="0.138"/>
@@ -18,7 +18,7 @@
             </LinearGradientBrush>
         </Grid.Background>
         <Label Content="Налаштування" HorizontalAlignment="Left" Margin="106,10,0,0" VerticalAlignment="Top" Foreground="White" FontSize="18" FontFamily="Segoe UI Black"/>
-        <CheckBox x:Name="night_Box" HorizontalAlignment="Left" Margin="67,90,0,0" VerticalAlignment="Top"/>
+        <CheckBox x:Name="night_Box" HorizontalAlignment="Left" Margin="67,90,0,0" VerticalAlignment="Top" IsChecked="True"/>
         <Label Content="Нічний режим" HorizontalAlignment="Left" Margin="86,83,0,0" VerticalAlignment="Top" Foreground="White" FontSize="14" RenderTransformOrigin="0.923,0.585"/>
         <CheckBox x:Name="Timer_Box" HorizontalAlignment="Left" Margin="67,131,0,0" VerticalAlignment="Top"/>
         <Label Content="Скрити таймер
